--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,18 @@
-web:
-  build: php
+dummy:
+  build: projects/dummy
 #  command: sh
   ports:
     - "8080:80"
 #  links:
 #    - db
-  volumes:
-    - ./php/src/:/var/www/html/
+#  volumes:
+#    - ./projects/dummy/src/:/var/www/html/
+#phpmyfaq:
+#  build: projects/phpmyfaq
+#  command: sh
+#  ports:
+#    - "8081:80"
+#  links:
+#    - db
+#  volumes:
+#    - ./projects/phpmyfaq/src/:/var/www/html/
