config pour restu

--- a/httpd/z_60_restru.conf
+++ b/httpd/z_60_restru.conf
@@ -1,11 +1,7 @@
 <VirtualHost *:80>
+    DocumentRoot /vagrant/projects/restructurations/webroot
     ServerName restru
     ServerAlias restru.localhost
     ErrorLog "logs/restru.localhost-error.log"
     CustomLog "logs/restru.localhost-access.log" combined
-    
-    ProxyPreserveHost On
-	ProxyPass / http://localhost:8082/
-	ProxyPassreverse / http://localhost:8082/
-    
 </VirtualHost>
